--- a/index.html
+++ b/index.html
@@ -4,26 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <meta property="og:site_name" content="Газета.uz">
+    <meta property="og:image" content="https://repository-images.githubusercontent.com/266900712/950b3e80-9eb6-11ea-9b4e-010725c3cc11">
+    
+    <meta name="keywords" content="bank, digital banking, easybank">
+    <meta name="author" content="Fotima">
+    <meta name="description" content="Take your financial life online. Your Easybank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.">
+
     <title>Easybank</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="icon" href="img/favicon.svg" type="image/x-icon">
+
 </head>
 <body>
 
-    <header class="main-header">
+    <header id="mainHeader" class="main-header">
         <div class="container">
             <div class="row">
                 <a href="#" class="logo"><img src="img/logo.svg" alt="Easybank logo"></a>
-                <button class="menu-toggle"><img src="img/menu.svg" alt=""></button>
-                <nav class="main-nav">
+                <button class="menu-toggle open" onclick="openMenu()"><img src="img/menu.svg" alt=""></button>
+                <button class="menu-toggle close" onclick="closeMenu()"><img src="img/close.svg" alt=""></button>
+                <nav id="mainnav" class="main-nav">
                     <a href="#" class="main-nav-link">Home</a>
                     <a href="#" class="main-nav-link">About</a>
                     <a href="#" class="main-nav-link">Contact</a>
                     <a href="#" class="main-nav-link">Blog</a>
                     <a href="#" class="main-nav-link">Careers</a>
                 </nav>
-                <button type="button" class="btn">Request Invite</button>
+                <button type="button" class="btn" onclick="openModal()">Request Invite</button>
             </div>
         </div>
     </header>
@@ -34,7 +45,7 @@
                 <img src="img/intro-mob.png" class="mob-img" alt="phones">
                 <h1 class="main-title">Next generation digital banking</h1>
                 <p class="page-text">Take your financial life online. Your Easybank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.</p>
-                <button type="button" class="btn">Request Invite</button>
+                <button type="button" class="btn" onclick="openModal()">Request Invite</button>
             </div>
         </div>
     </section>
@@ -166,6 +177,47 @@
             </div>
         </div>
     </footer>
+
+    <!-- Request Invite Modal -->
+    <div class="modal" id="requestModal">
+        <div class="modal-content">
+            <button type="button" id="closeModal" onclick="closeModal()"><img src="img/close.svg" alt=""></button>
+            <form action="/" method="GET">
+                <h2>Contact form</h2>
+                <input type="text" placeholder="Ism kiriting">
+                <input type="tel" placeholder="Telefon kiriting">
+                <button type="submit">Send</button>
+            </form>6
+        </div>
+    </div>
+    <!-- End Request Invite Modal  -->
+
+    <script>
+
+        const menu = document.getElementById('mainnav');
+        const header = document.getElementById('mainHeader');
+
+        function openMenu() {
+            menu.style.display = 'block';
+            header.classList = 'main-header on';
+        }
+
+        function closeMenu() {
+            menu.style.display = 'none';
+            header.classList = 'main-header';
+        }
+
+        const modal = document.getElementById('requestModal');
+
+        function openModal() {
+            modal.style.display = 'block';
+        }
+
+        function closeModal() {
+            modal.style.display = 'none';
+        }
+
+    </script>
 
 </body>
 </html>
